@@ -843,10 +843,10 @@ void can_send_broadcast(void)
 		_canmsg.CAN_data[2] = BYTE_H(_current[1]);
 		_canmsg.CAN_data[3] = BYTE_L(_current[1]);
 		
-		_canmsg.CAN_data[4] = BYTE_H(_error[0]);
-		_canmsg.CAN_data[5] = BYTE_L(_error[0]);
-		_canmsg.CAN_data[6] = BYTE_H(_error[1]);
-		_canmsg.CAN_data[7] = BYTE_L(_error[1]);
+		_canmsg.CAN_data[4] = BYTE_H(0);
+		_canmsg.CAN_data[5] = BYTE_L(0);
+		_canmsg.CAN_data[6] = BYTE_H(0);
+		_canmsg.CAN_data[7] = BYTE_L(0);
 			
 		_canmsg.CAN_length = 8;
 		_canmsg.CAN_frameType = DATA_FRAME;
@@ -864,10 +864,10 @@ void can_send_broadcast(void)
 			_canmsg.CAN_data[2] = BYTE_H(_current[3]);
 			_canmsg.CAN_data[3] = BYTE_L(_current[3]);
 			
-			_canmsg.CAN_data[4] = BYTE_H(_error[2]);
-			_canmsg.CAN_data[5] = BYTE_L(_error[2]);
-			_canmsg.CAN_data[6] = BYTE_H(_error[3]);
-			_canmsg.CAN_data[7] = BYTE_L(_error[3]);
+			_canmsg.CAN_data[4] = BYTE_H(0);
+			_canmsg.CAN_data[5] = BYTE_L(0);
+			_canmsg.CAN_data[6] = BYTE_H(0);
+			_canmsg.CAN_data[7] = BYTE_L(0);
 				
 			_canmsg.CAN_length = 8;
 			_canmsg.CAN_frameType = DATA_FRAME;
@@ -875,7 +875,51 @@ void can_send_broadcast(void)
 			CAN1_send(_canmsg.CAN_messID, _canmsg.CAN_frameType, _canmsg.CAN_length, _canmsg.CAN_data);
 	
 	}
+
+	if ((broadcast_mask[0] & (1<<(CAN_BCAST_PID_ERROR-1))) && _counter == 3) //same counter of CAN_BCAST_CURRENT
+	{
+		_canmsg.CAN_messID = 0x100;
+		_canmsg.CAN_messID |= (_board_ID) << 4;
+		_canmsg.CAN_messID |= CAN_BCAST_PID_ERROR;
+
+		_canmsg.CAN_data[0] = BYTE_H(_error_position[0]);
+		_canmsg.CAN_data[1] = BYTE_L(_error_position[0]);
+		_canmsg.CAN_data[2] = BYTE_H(_error_position[1]);
+		_canmsg.CAN_data[3] = BYTE_L(_error_position[1]);
+		
+		_canmsg.CAN_data[4] = BYTE_H(_error_torque[0]);
+		_canmsg.CAN_data[5] = BYTE_L(_error_torque[0]);
+		_canmsg.CAN_data[6] = BYTE_H(_error_torque[1]);
+		_canmsg.CAN_data[7] = BYTE_L(_error_torque[1]);
+			
+		_canmsg.CAN_length = 8;
+		_canmsg.CAN_frameType = DATA_FRAME;
+	   CAN1_send(_canmsg.CAN_messID, _canmsg.CAN_frameType, _canmsg.CAN_length, _canmsg.CAN_data);
+		
+	}
+	if ((broadcast_mask[1] & (1<<(CAN_BCAST_PID_ERROR-1))) && _counter == 3) //same counter of CAN_BCAST_CURRENT
+	{
+			_canmsg.CAN_messID = 0x100;
+			_canmsg.CAN_messID |= (_board_ID+1) << 4;
+			_canmsg.CAN_messID |= CAN_BCAST_PID_ERROR;
+
+			_canmsg.CAN_data[0] = BYTE_H(_error_position[2]);
+			_canmsg.CAN_data[1] = BYTE_L(_error_position[2]);
+			_canmsg.CAN_data[2] = BYTE_H(_error_position[3]);
+			_canmsg.CAN_data[3] = BYTE_L(_error_position[3]);
+			
+			_canmsg.CAN_data[4] = BYTE_H(_error_torque[2]);
+			_canmsg.CAN_data[5] = BYTE_L(_error_torque[2]);
+			_canmsg.CAN_data[6] = BYTE_H(_error_torque[3]);
+			_canmsg.CAN_data[7] = BYTE_L(_error_torque[3]);
+				
+			_canmsg.CAN_length = 8;
+			_canmsg.CAN_frameType = DATA_FRAME;
+
+			CAN1_send(_canmsg.CAN_messID, _canmsg.CAN_frameType, _canmsg.CAN_length, _canmsg.CAN_data);
 	
+	}
+		
 	if ((broadcast_mask[0] & (1<<(CAN_BCAST_VELOCITY-1))) && _counter == 4)
 	{
 		_canmsg.CAN_messID = 0x100;
